Fix elements overlapping sidebar drawer

--- a/jazzy/style.css
+++ b/jazzy/style.css
@@ -902,7 +902,7 @@ textarea {
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 100;
     top: 0;
     right: -5px;
     background-color: var(--white);
